<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_string_length"
            android:inputType="number"/>

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_random_string"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</layout>