<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#EEEEEE"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvMainBracket1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvRandomStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/randomtext'
            app:layout_constraintStart_toEndOf="@+id/tvMainBracket1"
            app:layout_constraintTop_toBottomOf="@+id/tvMainBracket1" />

        <TextView
            android:id="@+id/tvString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/value'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvRandomStr"
            app:layout_constraintTop_toBottomOf="@+id/tvRandomStr" />

        <TextView
            android:id="@+id/tvLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/length'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvString"
            app:layout_constraintTop_toBottomOf="@+id/tvString" />

        <TextView
            android:id="@+id/tvCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/created'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvLength"
            app:layout_constraintTop_toBottomOf="@+id/tvLength" />

        <TextView
            android:id="@+id/tvInnerCloseBracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            app:layout_constraintStart_toStartOf="@+id/tvRandomStr"
            app:layout_constraintTop_toBottomOf="@+id/tvCreated" />

        <TextView
            android:id="@+id/tvMainCloseBracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            app:layout_constraintStart_toStartOf="@+id/tvMainBracket1"
            app:layout_constraintTop_toBottomOf="@+id/tvInnerCloseBracket" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="@+id/tvCreated"
            app:layout_constraintTop_toBottomOf="@+id/tvMainCloseBracket" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
